--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,12 @@ section{
     justify-content: center;
     background-color: aquamarine;
 }
+.container2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+}
 .item{
     background-color: white;
     padding: 20px;
