--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,8 @@ section{
     text-align: center;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    display: flex;
+    flex-direction: column;
 }
 .item2{
     padding: 20px;
@@ -79,6 +81,8 @@ section{
     text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 16pt;
+    display: flex;
+    flex-direction: column;
 }
 .item3{
     padding: 20px;
@@ -87,6 +91,8 @@ section{
     text-align: justify;
    font-family: 'Times New Roman', Times, serif;
     font-size: 13pt;
+    display: flex;
+    flex-direction: column;
 }
 .item4{
     padding: 5px;
@@ -95,6 +101,8 @@ section{
     text-align: center;
    font-family: Arial, Helvetica, sans-serif;
     font-size: 14pt;
+    display: flex;
+    flex-direction: column;
 }
 .item5{
     padding: 5px;
@@ -103,6 +111,8 @@ section{
     text-align: left;
    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 12pt;
+    display: flex;
+    flex-direction: column;
 }
 .item6{
     padding: 5px;
@@ -111,6 +121,8 @@ section{
     text-align: justify;
    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 12pt;
+    display: flex;
+    flex-direction: column;
 }
 #profile{
     width: 300px;
@@ -131,4 +143,5 @@ section{
     flex: 1 1 300px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 16pt;
+
 }
