--- a/styles.css
+++ b/styles.css
@@ -113,12 +113,12 @@ section{
     font-size: 12pt;
 }
 #profile{
-    width: 20%;
+    width: 250px;
     border-radius: 50%;
     justify-content: center;
 }
 #profile2{
-    width: 20%;
+    width: 300px;
     border-radius: 60%;
    justify-content: center;
 }
